--- a/movies/package.json
+++ b/movies/package.json
@@ -3,21 +3,27 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "JWT_SECRET=secret mocha tests --recursive"
+    "test": "OMDB_API_KEY=386a00e3 JWT_SECRET=secret mocha tests --recursive",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "",
   "dependencies": {
+    "axios": "^1.3.0",
     "body-parser": "1.19.0",
     "express": "4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.9.0",
+    "pino": "^8.8.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0",
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
+    "sinon": "^15.0.1",
     "supertest": "^6.3.3"
   }
 }
