--- a/movies/package.json
+++ b/movies/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "OMDB_API_KEY=386a00e3 JWT_SECRET=secret mocha tests --recursive",
-    "start": "node src/server.js"
+    "test": "OMDB_API_KEY=386a004e3 JWT_SECRET=secret LOGGER_LEVEL=fatal mocha tests --recursive",
+    "start": "node src/server.js",
+    "mysql-setup": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +13,11 @@
   "dependencies": {
     "axios": "^1.3.0",
     "body-parser": "1.19.0",
+    "dotenv": "^16.0.3",
     "express": "4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.9.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.1.0",
     "pino": "^8.8.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0",
