add database migration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,39 @@
 version: "3.2"
 services:
-#  auth:
-#    command: node src/server.js
-#    build:
-#      context: auth
-#      dockerfile: Dockerfile
-#    container_name: auth
-#    ports:
-#      - published: ${APP_PORT:-3000}
-#        target: 3000
-#    volumes:
-#      - ./auth/:/app/
-#    environment:
-#      JWT_SECRET: ${JWT_SECRET}
-#    networks:
-#      movies:
-#
-#  movies:
-#    command: node src/server.js
-#    build:
-#      context: movies
-#      dockerfile: Dockerfile
-#    container_name: movies
-#    ports:
-#      - published: ${MOVIES_PORT:-3001}
-#        target: 3000
-#    volumes:
-#      - ./movies/:/app/
-#    environment:
-#      JWT_SECRET: ${JWT_SECRET}
-#      OMDB_API_KEY: ${MDB_API_KEY}
-#      LOGGER_LEVEL: ${LOGGER_LEVEL}
-#    networks:
-#      movies:
+  auth:
+    command: node src/server.js
+    build:
+      context: auth
+      dockerfile: Dockerfile
+    container_name: auth
+    ports:
+      - published: ${APP_PORT:-3000}
+        target: 3000
+    environment:
+      JWT_SECRET: ${JWT_SECRET}
+    networks:
+      movies:
+
+  movies:
+    command: node src/server.js
+    build:
+      context: movies
+      dockerfile: Dockerfile
+    container_name: movies
+    ports:
+      - published: ${MOVIES_PORT:-3001}
+        target: ${MOVIES_PORT:-3001}
+    environment:
+      APP_PORT: ${MOVIES_PORT:-3001}
+      JWT_SECRET: ${JWT_SECRET}
+      OMDB_API_KEY: ${OMDB_API_KEY}
+      LOGGER_LEVEL: ${LOGGER_LEVEL}
+      DB_HOST: ${DB_HOST}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_DATABASE: ${DB_DATABASE}
+    networks:
+      movies:
 
   db:
     image: mysql:8.0
@@ -40,10 +41,10 @@ services:
     networks:
       movies:
     environment:
-      MYSQL_DATABASE: 'movies'
-      MYSQL_USER: 'user'
-      MYSQL_PASSWORD: 'password'
-      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
     ports:
       - '3306:3306'
     expose:
