--- a/movies/example.env
+++ b/movies/example.env
@@ -1,6 +1,5 @@
-MOVIES_PORT=3001
-APP_PORT=3000
-JWT_SECRET=secret
+APP_PORT="3001"
+JWT_SECRET="secret"
 OMDB_API_KEY="apikey"
 LOGGER_LEVEL="fatal"
 DB_HOST=172.17.0.1
