--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
+        working-directory: ./movies
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
@@ -36,9 +37,8 @@ jobs:
         run: |
           #mysql
           sudo service mysql start
-          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -u root -p password < etc/original.sql
-          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -u root -p password -e "SHOW DATABASES"
-          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -u root -p password -e "CREATE DATABASE movies"
+          mysql --host 127.0.0.1 --port 3306 -uroot -ppassword -e "SHOW DATABASES"
+          mysql --host 127.0.0.1 --port 3306 -uroot -ppassword -e "CREATE DATABASE movies"
       - name: npm install and test
         working-directory: ./movies
         run: |
