--- a/movies/ci.env
+++ b/movies/ci.env
@@ -2,7 +2,7 @@ APP_PORT="3001"
 JWT_SECRET="secret"
 OMDB_API_KEY="apikey"
 LOGGER_LEVEL="fatal"
-DB_HOST=localhost
-DB_USER=root
+DB_HOST=127.0.0.1
+DB_USER=user
 DB_PASSWORD=password
 DB_DATABASE=movies
