--- a/movies/package.json
+++ b/movies/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.3.0",
     "body-parser": "1.19.0",
+    "date-and-time": "^2.4.2",
     "dotenv": "^16.0.3",
     "express": "4.17.1",
     "jsonwebtoken": "^8.5.1",
