--- a/example.env
+++ b/example.env
@@ -1,8 +1,8 @@
 MOVIES_PORT=3001
 APP_PORT=3000
 JWT_SECRET=secret
-OMDB_API_KEY="apikey"
-LOGGER_LEVEL="fatal"
+OMDB_API_KEY=apikey
+LOGGER_LEVEL=fatal
 DB_HOST=172.17.0.1
 DB_USER=user
 DB_PASSWORD=password
