--- a/movies/example.env
+++ b/movies/example.env
@@ -1,7 +1,7 @@
-APP_PORT="3001"
-JWT_SECRET="secret"
-OMDB_API_KEY="apikey"
-LOGGER_LEVEL="fatal"
+APP_PORT=3001
+JWT_SECRET=secret
+OMDB_API_KEY=apikey
+LOGGER_LEVEL=fatal
 DB_HOST=172.17.0.1
 DB_USER=user
 DB_PASSWORD=password
